; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_range.c_range_ptr_replace.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_range.c_range_ptr_replace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RRange = type { i32 }
%struct.RBasic = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.RRange*, i32, i32, i32)* @range_ptr_replace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @range_ptr_replace(i32* %0, %struct.RRange* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.RRange*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.RRange* %1, %struct.RRange** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.RRange*, %struct.RRange** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @range_ptr_init(i32* %11, %struct.RRange* %12, i32 %13, i32 %14, i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = load %struct.RRange*, %struct.RRange** %7, align 8
  %19 = bitcast %struct.RRange* %18 to %struct.RBasic*
  %20 = call i32 @mrb_write_barrier(i32* %17, %struct.RBasic* %19)
  ret void
}

declare dso_local i32 @range_ptr_init(i32*, %struct.RRange*, i32, i32, i32) #1

declare dso_local i32 @mrb_write_barrier(i32*, %struct.RBasic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
